@@ -18,7 +18,7 @@ S A Jenkins (jenkinsuz AT hotmail com)
 Matt Sephton (http://www.gingerbeardman.com)
 Scott Shapiro (scott AT iisystems com)
 Hoan Ton-That (http://www.happyappyinc.com)
-David Whatley (dw AT play net)
+David Whatley (http://www.criticalthoughtgames.com)
 Anton Zemlyanov (anton.zem AT gmail com)
 
 
